Done with update and delete

--- a/templates/home.html
+++ b/templates/home.html
@@ -1,25 +1,158 @@
+
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    
+    <meta name="description" content="">
+    <meta name="author" content="">
+	<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+<link href='https://fonts.googleapis.com/css?family=RobotoDraft' rel='stylesheet' type='text/css'>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="icon" href="../../favicon.ico">
 
-<head>
-	<title>Food Freak | Login</title>
-	<link rel="stylesheet" type="text/css" href="/static/css/index.css">
-	<script type="text/javascript" src="/static/js/index.js"></script>
+    <title>Customer info</title>
+
+    <!-- Bootstrap core CSS 
+    <link href="../../dist/css/bootstrap.min.css" rel="stylesheet">-->
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+
+    <!-- Custom styles for this template -->
+    <link href="dashboard.css" rel="stylesheet">
 	
-</head>
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+	
+	
+    <!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
+    <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
+    <script src="../../assets/js/ie-emulation-modes-warning.js"></script>
+<script>
+  function change()
+	{
+		
+	var location="";
+$.ajax({
+            url: "/view",
+            method: 'POST',
+            contentType: 'application/json',
+            data: JSON.stringify(location),
+            success: function( data, textStatus, jQxhr ){
+           
+          
+           for(var i=0;i<data[0].length;i++)
+            {	 
+		console.log(data[0]);
+		  var table = document.getElementById("myTable");
+    		  var row = table.insertRow(1);
+    		  var cell1 = row.insertCell(0);
+    		  var cell2 = row.insertCell(1);
+    		  var cell3 = row.insertCell(2);
+    		  var cell4 = row.insertCell(3);
+    			cell1.innerHTML = data[i][0];
+    			cell2.innerHTML = data[i][1];
+    			cell3.innerHTML = data[i][2];
+    			cell4.innerHTML = data[i][3];
+            	 //$( '#display' ).append(data[i]);
+            	 //$( '#display' ).append("<br>");
+
+        
+            //	$document.("#display").text()=
+            	//document.get.elementById("display").innerHTML=document.get.elementById("display").innerHTML+"<br>"+data[i];
+            }
+        }
+
+                
+				});   
+  
+}
+</script>
+
 <body>
- 	
-	<div class="login-page">
-		<div class="form">
-			<form id="name" class="login-form" action="/home" method="post">
-				<input name="name1" type="text" placeholder="Hotel Name"/>
-				<input name="location" type="text"  placeholder="location"/>
-				<input type="submit" value="Add Hotel">
-			<p class="message"><a href="/search">Search Hotels</a></p>
-			</form>
-		</div>
-		<div ><p>{{error}}</p> </div>
-		   	</div>
-	
-</body>
+
+    <nav class="navbar navbar-inverse navbar-fixed-top">
+      <div class="container-fluid">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" style="color: white; font-size: 30px;" href="inbox.php"></a>
+        </div>
+        <div id="navbar" class="navbar-collapse collapse">
+          <ul class="nav navbar-nav navbar-right">
+  		<li><a href="/home">View</a></li>
+           	<li><a href="/add">Add</a></li>
+		<li><a href="/delete">Delete</a></li>
+		<li><a href="/update">Update</a></li>
+            <li><a href="/">Log Out</a></li>
+          </ul>
+         
+        </div>
+      </div>
+    </nav>
+        <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
+		
+          <!--
+		  put this in table data.....
+		  <td>{$row['mail']}</td>-->
+			<br>
+		  <h1 class="page-header">Customer data</h1>
+		  <input type="button" onclick="change();" name="register-user" value="Refresh" class="btnreg">
+		  <div class="table-responsive" id="table-res">
+            <table class="table" id="myTable">
+              <thead>
+                <tr>
+                  <th>Customer ID</th>
+                  <th>name</th>
+		<th>phone no</th>
+                  <th>Address</th>
+                  
+                </tr>
+              </thead>
+             <tbody>
+    
+  			</tbody>
+
+            </table>
+          </div>
+          
+        </div>
+      </div>
+    </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+ <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    <script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery.min.js"><\/script>')</script>
+    <script src="../../dist/js/bootstrap.min.js"></script>
+    <!-- Just to make our placeholder images work. Don't actually copy the next line! -->
+    <script src="../../assets/js/vendor/holder.min.js"></script>
+    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
+    <script src="../../assets/js/ie10-viewport-bug-workaround.js"></script>
+  </body>
 </html>
